[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-snowloader"
version = "0.2.0"
description = "ServiceNow document loaders for LangChain - sync and async loaders for Incidents, CMDB, KB, Changes, Problems, Catalog, and Attachments."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Roni Das", email = "thetotaltechnology@gmail.com"},
]
keywords = [
    "servicenow", "langchain", "rag", "llm",
    "document-loader", "itsm", "cmdb", "incidents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langchain-core>=0.2.0",
    "snowloader>=0.2.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.9.0"]

[project.urls]
Homepage = "https://github.com/ronidas39/snowloader"
Documentation = "https://snowloader.readthedocs.io"
Repository = "https://github.com/ronidas39/snowloader"

[tool.hatch.build.targets.wheel]
packages = ["langchain_snowloader"]
